@@ -1,0 +1,37 @@
+{
+  "check_exit_status": "yes",
+  "customize": {
+    "install_env": {
+      "PACKAGE_URL": "http://releases.llvm.org/4.0.0/",
+      "PACKAGE_WGET": "YES",
+      "PACKAGE_WGET_EXTRA": "--no-cookies"
+    },
+    "version": ""
+  },
+  "end_full_path": {
+    "linux": "bin/clang-4.0",
+    "win": "bin\\clang.exe"
+  },
+  "only_for_target_os_tags": [
+    "linux",
+    "windows"
+  ],
+  "need_cpu_info": "yes",
+  "process_script": "install",
+  "soft_uoa": "1c2eb494b8ae3bc4",
+  "suggested_path": "llvm-4.0.0",
+  "tags": [
+    "compiler",
+    "llvm",
+    "lang-c",
+    "lang-cpp",
+    "v4.0.0-ck-package",
+    "v4.0.0",
+    "v4.0",
+    "v4"
+  ],
+  "use_scripts_from_another_entry": {
+    "data_uoa": "cd9ccc74060b3d18",
+    "module_uoa": "script"
+  }
+}
