@@ -1,4 +1,5 @@
 * 2017.04.15 - moved many generic packages from ck-autotuning here
+             - added LLVM 4.0.0 universal package (still need to fix for Linux)
 
 * 2017.04.14 - fixed mingw gfortran detection on Windows (for Caffe)
 
